Hopefully a fix for the misaligned markers
Need to refire the ScrollTrigger.refresh() method once all of our components have mounted

--- a/styles/components/images-block.scss
+++ b/styles/components/images-block.scss
@@ -49,6 +49,8 @@ The different "variants" are:
       width: calc(50% - 5px);
       height: 50vw;
       object-fit: cover;
+      opacity: 0;
+      transform: translateY(50px);
 
       @media (min-width: $tablet) {
         width: auto;
